upgrading to Java 11